high state again, forecast catch not same

--- a/model/2025_high_state/plots/_SS_output.html
+++ b/model/2025_high_state/plots/_SS_output.html
@@ -96,86 +96,16 @@
 
 <p><b>r4ss info:<br></b>
 Version: 1.52.0<br>Date: NULL<br>Built: R 4.4.1; ; 2025-05-29 22:02:32 UTC; windows<br>RemoteType: github<br>RemoteHost: api.github.com<br>RemoteRepo: r4ss<br>RemoteUsername: r4ss<br>RemoteRef: HEAD<br>RemoteSha: 32ca18387d61e3bd71a12f8e9b587418f957b722<br><p><b>Starting time of model:</b>
-Thu May 29 22:21:27 2025</p>
+Thu May 29 23:52:35 2025</p>
 
-<p><b>Warnings (first 20 from file warnings.sso):</b></p>
+<p><b>Warnings (from file warnings.sso):</b></p>
 
 <pre>
 Note 1 Information: Max data length bin: 74  < max pop len bins: 88; so will accumulate larger pop len bins
-Warning 1 : Input catches in 2027 can be overridden by caps or allocations
-Warning 2 : Input catches in 2027 can be overridden by caps or allocations
-Warning 3 : Input catches in 2027 can be overridden by caps or allocations
-Warning 4 : Input catches in 2027 can be overridden by caps or allocations
-Warning 5 : Input catches in 2027 can be overridden by caps or allocations
-Warning 6 : Input catches in 2027 can be overridden by caps or allocations
-Warning 7 : Input catches in 2027 can be overridden by caps or allocations
-Warning 8 : Input catches in 2028 can be overridden by caps or allocations
-Warning 9 : Input catches in 2028 can be overridden by caps or allocations
-Warning 10 : Input catches in 2028 can be overridden by caps or allocations
-Warning 11 : Input catches in 2028 can be overridden by caps or allocations
-Warning 12 : Input catches in 2028 can be overridden by caps or allocations
-Warning 13 : Input catches in 2028 can be overridden by caps or allocations
-Warning 14 : Input catches in 2028 can be overridden by caps or allocations
-Warning 15 : Input catches in 2029 can be overridden by caps or allocations
-Warning 16 : Input catches in 2029 can be overridden by caps or allocations
-Warning 17 : Input catches in 2029 can be overridden by caps or allocations
-Warning 18 : Input catches in 2029 can be overridden by caps or allocations
-Warning 19 : Input catches in 2029 can be overridden by caps or allocations
-Warning 20 : Input catches in 2029 can be overridden by caps or allocations
-Warning 21 : Input catches in 2029 can be overridden by caps or allocations
-Warning 22 : Input catches in 2030 can be overridden by caps or allocations
-Warning 23 : Input catches in 2030 can be overridden by caps or allocations
-Warning 24 : Input catches in 2030 can be overridden by caps or allocations
-Warning 25 : Input catches in 2030 can be overridden by caps or allocations
-Warning 26 : Input catches in 2030 can be overridden by caps or allocations
-Warning 27 : Input catches in 2030 can be overridden by caps or allocations
-Warning 28 : Input catches in 2030 can be overridden by caps or allocations
-Warning 29 : Input catches in 2031 can be overridden by caps or allocations
-Warning 30 : Input catches in 2031 can be overridden by caps or allocations
-Warning 31 : Input catches in 2031 can be overridden by caps or allocations
-Warning 32 : Input catches in 2031 can be overridden by caps or allocations
-Warning 33 : Input catches in 2031 can be overridden by caps or allocations
-Warning 34 : Input catches in 2031 can be overridden by caps or allocations
-Warning 35 : Input catches in 2031 can be overridden by caps or allocations
-Warning 36 : Input catches in 2032 can be overridden by caps or allocations
-Warning 37 : Input catches in 2032 can be overridden by caps or allocations
-Warning 38 : Input catches in 2032 can be overridden by caps or allocations
-Warning 39 : Input catches in 2032 can be overridden by caps or allocations
-Warning 40 : Input catches in 2032 can be overridden by caps or allocations
-Warning 41 : Input catches in 2032 can be overridden by caps or allocations
-Warning 42 : Input catches in 2032 can be overridden by caps or allocations
-Warning 43 : Input catches in 2033 can be overridden by caps or allocations
-Warning 44 : Input catches in 2033 can be overridden by caps or allocations
-Warning 45 : Input catches in 2033 can be overridden by caps or allocations
-Warning 46 : Input catches in 2033 can be overridden by caps or allocations
-Warning 47 : Input catches in 2033 can be overridden by caps or allocations
-Warning 48 : Input catches in 2033 can be overridden by caps or allocations
-Warning 49 : Input catches in 2033 can be overridden by caps or allocations
-Warning 50 : Input catches in 2034 can be overridden by caps or allocations
-Warning 51 : Input catches in 2034 can be overridden by caps or allocations
-Warning 52 : Input catches in 2034 can be overridden by caps or allocations
-Warning 53 : Input catches in 2034 can be overridden by caps or allocations
-Warning 54 : Input catches in 2034 can be overridden by caps or allocations
-Warning 55 : Input catches in 2034 can be overridden by caps or allocations
-Warning 56 : Input catches in 2034 can be overridden by caps or allocations
-Warning 57 : Input catches in 2035 can be overridden by caps or allocations
-Warning 58 : Input catches in 2035 can be overridden by caps or allocations
-Warning 59 : Input catches in 2035 can be overridden by caps or allocations
-Warning 60 : Input catches in 2035 can be overridden by caps or allocations
-Warning 61 : Input catches in 2035 can be overridden by caps or allocations
-Warning 62 : Input catches in 2035 can be overridden by caps or allocations
-Warning 63 : Input catches in 2035 can be overridden by caps or allocations
-Warning 64 : Input catches in 2036 can be overridden by caps or allocations
-Warning 65 : Input catches in 2036 can be overridden by caps or allocations
-Warning 66 : Input catches in 2036 can be overridden by caps or allocations
-Warning 67 : Input catches in 2036 can be overridden by caps or allocations
-Warning 68 : Input catches in 2036 can be overridden by caps or allocations
-Warning 69 : Input catches in 2036 can be overridden by caps or allocations
-Warning 70 : Input catches in 2036 can be overridden by caps or allocations
 Note 2 Suggestion:  recr_dist_method 3 is simpler and takes 1 parm for each settlement
-Warning 71 : At least one block pattern ends in endyr. Check the output parameter value time series to see if the values in forecast years are as intended.
-Warning 72 : Minimum pop size bin:_8; is > L at Amin for sex: 1; Gpat: 1; L= 1.54815
-Warning 73 : 1st iteration warning: ssb(endyr)/ssb(styr)= 3.31485e-08; suggest start with larger R0 to get near 0.4; or use depletion fleet option
+Warning 1 : At least one block pattern ends in endyr. Check the output parameter value time series to see if the values in forecast years are as intended.
+Warning 2 : Minimum pop size bin:_8; is > L at Amin for sex: 1; Gpat: 1; L= 1.54815
+Warning 3 : 1st iteration warning: ssb(endyr)/ssb(styr)= 3.31485e-08; suggest start with larger R0 to get near 0.4; or use depletion fleet option
 Note 3 Information:  N parameters that are on or within 1% of min-max bound: 1; check results, variance may be suspect
- 73 warnings  and 3 notes 
+ 3 warnings  and 3 notes 
 </pre>
